2008-07-30  Anders Carlsson  <andersca@apple.com>

        One step closer towards fixing the Windows build.
        
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreGenerated.make:
        Make sure to copy WebKitAvailability.h

2008-07-29  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Geoff Garen.

        Bug 20209: Atomize constant strings
        <https://bugs.webkit.org/show_bug.cgi?id=20209>

        Prevents significant performance degradation seen when a script contains multiple
        identical strings that are used as keys to identify properties on objects.

        No performance change on SunSpider.

        * kjs/nodes.cpp: Atomize constant strings.

2008-07-30  Oliver Hunt  <oliver@apple.com>

        Reviewed by Alexey Proskuryakov.

        <rdar://problem/6111648> JavaScript exceptions fail if the scope chain includes the global object

        In an attempt to remove the branch I just added to KJS::depth I
        used the existence of a Variable Object at a point in the scope
        chain as an indicator of function or global scope activation.
        However this assumption results in incorrect behaviour if the
        global object is injected into the scope chain with 'with'.

        * VM/Machine.cpp:
        (KJS::depth):

2008-07-30  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Geoff Garen.

        Don't call JSGarbageCollect() on a released context.

        * API/testapi.c: (main):

2008-07-29  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Geoff Garen.

        Implement JSContextGroup APIs to make concurrent execution possible for
        JavaScriptCore clients.

        This changes the behavior of JSGlobalContextCreate(), so that it now uses a private context
        group for each context, making JSlock implicit locking unnecessary.

        * API/JSContextRef.h:
        * API/JSContextRef.cpp:
        (JSContextGroupCreate):
        (JSContextGroupRetain):